--- a/makepkg-generic.conf
+++ b/makepkg-generic.conf
@@ -28,8 +28,8 @@ CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"
 
 #llvm
-export CC=clang
-export CXX=clang++
+#export CC=clang
+#export CXX=clang++
 
 #-- Compiler and Linker Flags
 # -march (or -mcpu) builds exclusively for an architecture
@@ -52,10 +52,10 @@ LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j$(nproc)"
 #-- Debugging flags
-#DEBUG_CFLAGS="-g -fvar-tracking-assignments"
-#DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
-DEBUG_CFLAGS="-g"
-DEBUG_CXXFLAGS="-g"
+DEBUG_CFLAGS="-g -fvar-tracking-assignments"
+DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
+#DEBUG_CFLAGS="-g"
+#DEBUG_CXXFLAGS="-g"
 
 #########################################################################
 # BUILD ENVIRONMENT
