--- a/makepkg-barch.conf
+++ b/makepkg-barch.conf
@@ -28,8 +28,8 @@ CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"
 
 #llvm
-#export CC=clang
-#export CXX=clang++
+export CC=clang
+export CXX=clang++
 
 #-- Compiler and Linker Flags
 # -march (or -mcpu) builds exclusively for an architecture
